--- a/Cocoon/Views/Services/Create.cshtml
+++ b/Cocoon/Views/Services/Create.cshtml
@@ -334,7 +334,7 @@
     document.addEventListener("DOMContentLoaded", function () {
         var isTimeBoundServiceCheckbox = document.getElementById("IsTimeBoundService");
         var inventoryContainer = document.getElementById("inventory-container");
-        var FeaturesContainer = document.getElementById("Features-container");
+        //var FeaturesContainer = document.getElementById("Features-container");
         var inventoryInput = document.getElementById("Inventory");
         var ServiceDaysInput = document.getElementById("ServiceDays");
         var ServiceFreezingTimesInput = document.getElementById("ServiceFreezingTimes");
@@ -354,7 +354,7 @@
                 FreezingTimesContainer.style.display = "block";
                 //InBodyCountContainer.style.display = "block";
                 inventoryContainer.style.display = "none";
-                FeaturesContainer.style.display = "block";
+                //FeaturesContainer.style.display = "block";
                 inventoryInput.value = 1;
                 ServiceDaysInput.value = 1;
                 ServiceFreezingTimesInput.value = 1;
@@ -367,7 +367,7 @@
                 FreezingTimesContainer.style.display = "none";
                 //InBodyCountContainer.style.display = "none";
                 inventoryContainer.style.display = "block";
-                FeaturesContainer.style.display = "none";
+                //FeaturesContainer.style.display = "none";
                 inventoryInput.value = '1'; // Clear the value of Inventory
                 ServiceDaysInput.value = '1'; // Clear the value of ServiceDays
                 ServiceFreezingTimesInput.value = '1'; // Clear the value of ServiceFreezingTimes
